--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,10 @@
-print("hi friends bye friends")
+String text = "contains text";
+int wholeNumber = 123;
+double floatingPoint = 3.141592653;
+boolean trueOrFalse = true;
+
+System.out.println("Text variable: " + text);
+System.out.println("Integer variable: " + wholeNumber);
+System.out.println("Floating-point variable: " + floatingPoint);
+System.out.println("Boolean: " + trueOrFalse);
+
