--- a/porapora/pom.xml
+++ b/porapora/pom.xml
@@ -1,15 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+// Java Program to Find the Biggest of 3 Numbers
 
-    <groupId>com.yourcompany</groupId>
-    <artifactId>porapora</artifactId>
-    <version>1.0-SNAPSHOT</version>
+// Importing generic Classes/Files
+import java.io.*;
 
-    <dependencies>
-        <!-- Add your dependencies here -->
-    </dependencies>
-</project>
+class GFG {
+  
+    // Function to find the biggest of three numbers
+    static int biggestOfThree(int x, int y, int z)
+    {
 
+        return z > (x > y ? x : y) ? z : ((x > y) ? x : y);
+    }
+
+    // Main driver function
+    public static void main(String[] args)
+    {
+
+        // Declaring variables for 3 numbers
+        int a, b, c;
+
+        // Variable holding the largest number
+        int largest;
+        a = 5;
+        b = 10;
+        c = 3;
+        // Calling the above function in main
+        largest = biggestOfThree(a, b, c);
+
+        // Printing the largest number
+        System.out.println(largest
+                           + " is the largest number.");
+    }
+}
