--- a/porapora/pom.xml
+++ b/porapora/pom.xml
@@ -1,9 +1,36 @@
-String text = "contains text";
-int wholeNumber = 123;
-double floatingPoint = 3.141592653;
-boolean trueOrFalse = true;
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-System.out.println("Text variable: " + text);
-System.out.println("Integer variable: " + wholeNumber);
-System.out.println("Floating-point variable: " + floatingPoint);
-System.out.println("Boolean: " + trueOrFalse);
+    <!-- Project coordinates -->
+    <groupId>com.example</groupId>
+    <artifactId>my-project</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging> <!-- Can be jar, war, etc. -->
+
+    <!-- Project dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.10</version>
+        </dependency>
+    </dependencies>
+
+    <!-- Build information -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
